--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -911,11 +911,11 @@ l'attore inserisce un valore di default modificato.
 \label{UC4.11.3.6}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
-\item \textbf{Descrizione}: l’attore può confermare le modifiche apportate all'attributo;	
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate all'attributo;	
 \item \textbf{Precondizione}: il sistema visualizza il form per l'inserimento dei dati;	
 \item \textbf{Postcondizione}: il sistema visualizza l'attributo modificato;	
 \item \textbf{Scenario principale}:
-l’attore conferma le modifiche dell'attributo;	
+l'attore conferma le modifiche dell'attributo;	
 \item \textbf{Inclusioni}:
 Visualizzazione Errore Inserimento Attributo (UC4.1.4.6.1);
 \item \textbf{Scenari alternativi}:
@@ -1006,11 +1006,11 @@ l'attore inserisce il tipo modificato del parametro.
 \label{UC4.11.4.3.3}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
-\item \textbf{Descrizione}: l’attore può confermare le modifiche apportate al parametro;	
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate al parametro;	
 \item \textbf{Precondizione}: il sistema visualizza il form per l'inserimento dei dati;	
 \item \textbf{Postcondizione}: il sistema visualizza il parametro modificato;	
 \item \textbf{Scenario principale}:
-l’attore visualizza il parametro modificato;	
+l'attore visualizza il parametro modificato;	
 \item \textbf{Inclusioni}:
 Visualizzazione Errore Inserimento Parametro (UC4.1.6.3.3.1);
 \item \textbf{Scenari alternativi}:
@@ -1035,11 +1035,11 @@ l'attore inserisce il tipo di ritorno modificato del metodo.
 \label{UC4.11.4.5}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
-\item \textbf{Descrizione}: l’attore può confermare le modifiche apportate al metodo;	
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate al metodo;	
 \item \textbf{Precondizione}: il sistema visualizza il form per l'inserimento dei dati;	
 \item \textbf{Postcondizione}: il sistema visualizza il metodo modificato;	
 \item \textbf{Scenario principale}:
-l’attore conferma le modifiche apportate al metodo;	
+l'attore conferma le modifiche apportate al metodo;	
 \item \textbf{Inclusioni}:
 Visualizzazione Errore Inserimento Metodo (UC4.1.6.5.1);
 \item \textbf{Scenari alternativi}:
@@ -1058,7 +1058,7 @@ Visualizzazione Errore Inserimento Metodo (UC4.1.6.5.1);
 \item \textbf{Precondizione}: il sistema visualizza il form per l'inserimento dei dati;	
 \item \textbf{Postcondizione}: il sistema visualizza la classe modificata;	
 \item \textbf{Scenario principale}:
-l’attore conferma le modifiche apportate alla classe;	
+l'attore conferma le modifiche apportate alla classe;	
 \item \textbf{Inclusioni}:
 Visualizzazione Errore Inserimento Classe (UC4.1.8.1);
 \item \textbf{Scenari alternativi}:
@@ -1203,11 +1203,11 @@ l'attore sceglie il parent del commento.
 \label{UC4.13.3}
 \begin{itemize}
 \item \textbf{Attori}: ;
-\item \textbf{Descrizione}: l’attore può confermare le modifiche apportate al commento;	
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate al commento;	
 \item \textbf{Precondizione}: il sistema visualizza il form per l'inserimento dei dati;	
 \item \textbf{Postcondizione}: il sistema visualizza il commento modificato;	
 \item \textbf{Scenario principale}:
-l’attore conferma le modifiche apportate al commento;	
+l'attore conferma le modifiche apportate al commento;	
 \item \textbf{Inclusioni}:
 Visualizzazione Errore Inserimento Commento (UC4.3.3.1);
 \item \textbf{Scenari alternativi}:
@@ -1685,7 +1685,7 @@ inserito nel diagramma delle attività corrente;
 \item \textbf{Scenario principale}:
 \begin{enumerate}
 \item l'attore può inserisce il contenuto in codice del blocco custom (UC5.6.1);
-\item l'attore può inserisce un commento a corredo del blocco custom(UC5.6.2);
+\item l'attore può inserisce un commento relativo al blocco custom(UC5.6.2);
 \item l'attore può confermare l'inserimento del blocco custom (UC5.6.3).	
 \end{enumerate}
 \end{itemize}
@@ -1893,6 +1893,7 @@ l'attore muove il blocco selezionato in una nuova posizione del diagramma delle 
 \item \textbf{Postcondizione}: il form ha ricevuto i dati richiesti;	
 \item \textbf{Scenario principale}:
 L'attore modifica il nome della variabile selezionata per la modifica.	
+\end{itemize}
 %\item l'attore può scegliere di modificare il tipo della variabile (UC5.20.2);
 \paragraph{UC5.20.2: Modifica Tipo Variabile}
 \label{UC5.20.2}
@@ -1902,7 +1903,8 @@ L'attore modifica il nome della variabile selezionata per la modifica.
 \item \textbf{Precondizione}: l'attore ha selezionato il blocco variabile da modificare e il sistema visualizza il form di inserimento dati ;	
 \item \textbf{Postcondizione}: il form ha ricevuto i dati richiesti;	
 \item \textbf{Scenario principale}:
-L'attore modifica il tipo della variabile selezionata per la modifica.	
+L'attore modifica il tipo della variabile selezionata per la modifica.
+\end{itemize}	
 %\item l'attore può scegliere di modificare il valore della variabile (UC5.20.3);
 \paragraph{UC5.20.3: Modifica Valore Variabile}
 \label{UC5.20.3}
@@ -1912,7 +1914,8 @@ L'attore modifica il tipo della variabile selezionata per la modifica.
 \item \textbf{Precondizione}: l'attore ha selezionato il blocco variabile da modificare e il sistema visualizza il form di inserimento dati ;	
 \item \textbf{Postcondizione}: il form ha ricevuto i dati richiesti;	
 \item \textbf{Scenario principale}:
-L'attore modifica il valore della variabile selezionata per la modifica.	
+L'attore modifica il valore della variabile selezionata per la modifica.
+\end{itemize}	
 
 %\item l'attore può confermare le modifiche apportate al blocco variabile (UC5.20.4).
 \paragraph{UC5.20.4: Conferma Modifica Blocco Variabile}
@@ -1932,6 +1935,7 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.1.4.1);
 \item l'attore non ha fornito un valore da assegnare alla variabile già esistente e visibile;
 \item l'attore non ha inserito un commento.	
 \end{itemize}	
+\end{itemize}
 
 %\item l'attore può modificare un blocco metodo (UC5.21);
 \subsubsection{UC5.21: Modifica Blocco Metodo}
@@ -1958,6 +1962,7 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.1.4.1);
 \item \textbf{Postcondizione}: il form ha ricevuto i dati richiesti;	
 \item \textbf{Scenario principale}:
 L'attore modifica il blocco metodo selezionato per la modifica.	
+\end{itemize}
 %\item l'attore può scegliere di modificare un commento (UC5.21.2);
 \paragraph{UC5.21.2: Modifica Commento Metodo}
 \label{UC5.21.2}
@@ -1968,6 +1973,7 @@ L'attore modifica il blocco metodo selezionato per la modifica.
 \item \textbf{Postcondizione}: il form ha ricevuto i dati richiesti;	
 \item \textbf{Scenario principale}:
 L'attore modifica il commento del blocco metodo selezionato per la modifica.	
+\end{itemize}
 %\item l'attore può confermare le modifiche apportate al blocco metodo (UC5.21.3).
 \paragraph{UC5.21.3: Conferma Modifica Blocco Metodo}
 \label{UC5.21.3}
@@ -1997,43 +2003,231 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.2.3.1);
 \item \textbf{Scenario principale}:
 \begin{enumerate}
 \item l'attore può scegliere di modificare la condizione da verificare (UC5.22.1);
-\item l'attore può scegliere di modificare il contenuto del blocco if (UC5.22.2);
-\item l'attore può scegliere di modificare il contenuto del blocco else (UC5.22.3);
-\item l'attore può scegliere di modificare il commento (UC5.22.4);
-\item l'attore può confermare le modifiche apportate al blocco if/else (UC5.22.5).
+\item l'attore può scegliere di modificare il commento (UC5.22.2);
+\item l'attore può confermare le modifiche apportate al blocco if/else (UC5.22.3).
 \end{enumerate}
-\end{itemize}	
+\end{itemize}
+%\item l'attore può scegliere di modificare la condizione da verificare (UC5.22.1);
+\paragraph{UC5.22.1: Modifica Condizione Blocco If/Else}
+\label{UC5.22.1}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare la condizione da verificare relativa al blocco if/else selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco if/else da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati richiesti;	
+\item \textbf{Scenario principale}:
+L'attore modifica la condizione da verificare relativa al blocco if/else selezionato per la modifica.
+\end{itemize}
+%\item l'attore può scegliere di modificare il commento (UC5.22.2);
+\paragraph{UC5.22.2: Modifica Contenuto Blocco If/Else}
+\label{UC5.22.2}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare il commento relativo al blocco if/else selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco if/else da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati richiesti;	
+\item \textbf{Scenario principale}:
+L'attore modifica il commento relativo al blocco if/else selezionato per la modifica.
+\end{itemize}
+%\item l'attore può confermare le modifiche apportate al blocco if/else (UC5.22.3).	
+\paragraph{UC5.22.3: Conferma Modifica Blocco If/Else}
+\label{UC5.22.3}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate al blocco if/else selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco if/else da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il sistema visualizza il blocco if/else modificato;	
+\item \textbf{Scenario principale}:
+L'attore conferma le modifiche apportate al blocco if/else selezionato per la modifica.
+\item \textbf{Estensioni}:
+l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.3.5.1);	
+\item \textbf{Scenari alternativi}:
+\begin{itemize}
+\item l'attore non ha fornito la condizione da verificare;
+\item l'attore non ha inserito un commento.
+\end{itemize}
+\end{itemize}
 %\item l'attore può modificare un blocco while (UC5.23);
-\subsubsection{UC5.: Modifica }
-\label{UC5.20}
+\subsubsection{UC5.23: Modifica Blocco While}
+\label{UC5.23}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
-\item \textbf{Descrizione}: l'attore può modificare ;
-\item \textbf{Precondizione}: l'attore ha selezionato il blocco  e il sistema visualizza il form di inserimento dati ;	
-\item \textbf{Postcondizione}: il sistema visualizza il blocco   modificato;	
+\item \textbf{Descrizione}: l'attore può modificare il blocco while selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco while e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il sistema visualizza il blocco while modificato;	
 \item \textbf{Scenario principale}:
-L'attore modifica il blocco   selezionato.	
+\item l'attore può scegliere di modificare la condizione da verificare (UC5.23.1);
+\item l'attore può scegliere di inserire un commento (UC5.23.2);
+\item l'attore può confermare le modifiche apportate al blocco while (UC5.23.3).
+\end{itemize}
+%\item l'attore può scegliere di modificare la condizione da verificare (UC5.23.1);
+\paragraph{UC5.23.1: Modifica Condizione Blocco While}
+\label{UC5.23.1}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare la condizione relativa al blocco while selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco while da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica la condizione relativa al blocco while selezionato per la modifica.
+\end{itemize}
+%\item l'attore può scegliere di inserire un commento (UC5.23.2);
+\paragraph{UC5.23.2: Modifica Commento Blocco While}
+\label{UC5.23.2}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare il commento relativo al blocco while selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco while da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica il commento relativo al blocco while selezionato per la modifica.
+\end{itemize}
+%\item l'attore può confermare le modifiche apportate al blocco while (UC5.23.3).
+\paragraph{UC5.23.3: Conferma Modifica Blocco While}
+\label{UC5.23.3}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate al blocco while selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco while da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il sistema visualizza il blocco while modificato;	
+\item \textbf{Scenario principale}:
+L'attore conferma le modifiche apportate al blocco while selezionato per la modifica.
+\item \textbf{Estensioni}:
+l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.4.4.1);	
+\item \textbf{Scenari alternativi}:
+\begin{itemize}
+\item l'attore non ha fornito la condizione da verificare;
+\item l'attore non ha inserito un commento.
+\end{itemize}
+\end{itemize}
 %\item l'attore può modificare un blocco for (UC5.24);
-\subsubsection{UC5.: Modifica }
-\label{UC5.20}
+\subsubsection{UC5.24: Modifica Blocco For}
+\label{UC5.24}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
-\item \textbf{Descrizione}: l'attore può modificare ;
-\item \textbf{Precondizione}: l'attore ha selezionato il blocco  e il sistema visualizza il form di inserimento dati ;	
-\item \textbf{Postcondizione}: il sistema visualizza il blocco   modificato;	
+\item \textbf{Descrizione}: l'attore può modificare il blocco for selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco for e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il sistema visualizza il blocco for modificato;	
 \item \textbf{Scenario principale}:
-L'attore modifica il blocco   selezionato.	
+\begin{itemize}
+\item l'attore può scegliere di modificare il codice di inizializzazione (UC5.24.1);
+\item l'attore può scegliere di modificare la condizione da verificare (UC5.24.2);
+\item l'attore può scegliere di modificare il passo di incremento/decremento (UC5.24.3);
+\item l'attore può scegliere di modificare un commento (UC5.24.4);
+\item l'attore può scegliere di confermare le modifiche apportate al blocco for (UC5.24.5).
+\end{itemize}
+\end{itemize}
+%\item l'attore può scegliere di modificare il codice di inizializzazione (UC5.24.1);
+\paragraph{UC5.24.1: Modifica Inizializzazione Blocco For}
+\label{UC5.24.1}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare l'inizializzazione del blocco for selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco for da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica l'inizializzazione del blocco for selezionato per la modifica.
+\end{itemize}
+%\item l'attore può scegliere di modificare la condizione da verificare (UC5.24.2);
+\paragraph{UC5.24.2: Modifica Condizione Blocco For}
+\label{UC5.24.2}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare la condizione del blocco for selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco for da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica la condizione del blocco for selezionato per la modifica.
+\end{itemize}
+%\item l'attore può scegliere di modificare il passo di incremento/decremento (UC5.24.3);
+\paragraph{UC5.24.3: Modifica Incremento/Decremento Blocco For}
+\label{UC5.24.3}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare il passo di incremento/decremento del blocco for selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco for da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica il passo di incremento/decremento del blocco for selezionato per la modifica.
+\end{itemize}
+%\item l'attore può scegliere di modificare un commento (UC5.24.4);
+\paragraph{UC5.24.4: Modifica Commento Blocco For}
+\label{UC5.24.4}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare il commento del blocco for selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco for da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica il commento del blocco for selezionato per la modifica.
+\end{itemize}
+%\item l'attore può scegliere di confermare le modifiche apportate al blocco for (UC5.24.5).
+\paragraph{UC5.24.5: Conferma Modifica Blocco For}
+\label{UC5.24.5}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate al blocco for selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco for da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il sistema visualizza il blocco for modificato;	
+\item \textbf{Scenario principale}:
+L'attore conferma le modifiche apportate al blocco for selezionato per la modifica.
+\item \textbf{Estensioni}:
+l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.5.6.1);	
+\item \textbf{Scenari alternativi}:
+\begin{itemize}
+\item l'attore non ha fornito la condizione da verificare;
+\item l'attore non ha fornito l'incremento/decremento;
+\item l'attore non ha inserito un commento.
+\end{itemize}
+\end{itemize}
 %\item l'attore può modificare un blocco custom (UC5.25).
-\subsubsection{UC5.: Modifica }
-\label{UC5.20}
+\subsubsection{UC5.25: Modifica Blocco Custom}
+\label{UC5.25}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
-\item \textbf{Descrizione}: l'attore può modificare ;
-\item \textbf{Precondizione}: l'attore ha selezionato il blocco  e il sistema visualizza il form di inserimento dati ;	
-\item \textbf{Postcondizione}: il sistema visualizza il blocco   modificato;	
+\item \textbf{Descrizione}: l'attore può modificare il blocco custom selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco custom e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il sistema visualizza il blocco custom modificato;	
 \item \textbf{Scenario principale}:
-L'attore modifica il blocco   selezionato.	
-
+\begin{enumerate}
+\item l'attore può modificare il contenuto in codice del blocco custom (UC5.25.1);
+\item l'attore può modificare il commento relativo al blocco custom(UC5.25.2);
+\item l'attore può confermare le modifiche apportate al blocco custom (UC5.25.3).	
+\end{enumerate}	
+\end{itemize}
+%\item l'attore può modificare il contenuto in codice del blocco custom (UC5.25.1);
+\paragraph{UC5.25.1: Modifica Contenuto Blocco Custom}
+\label{UC5.25.1}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare il contenuto del blocco custom selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco custom da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica il contenuto del blocco custom selezionato per la modifica.
+\end{itemize}
+%\item l'attore può modificare il commento relativo al blocco custom(UC5.25.2);
+\paragraph{UC5.25.2: Modifica Commento Blocco Custom}
+\label{UC5.25.2}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può modificare il commento del blocco custom selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco custom da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il form ha ricevuto i dati necessari;	
+\item \textbf{Scenario principale}:
+L'attore modifica il commento del blocco custom selezionato per la modifica.
+\end{itemize}
+%\item l'attore può confermare le modifiche apportate al blocco custom (UC5.25.3).
+\paragraph{UC5.25.3: Conferma Modifica Blocco Custom}
+\label{UC5.25.3}
+\begin{itemize}
+\item \textbf{Attori}: Utente;
+\item \textbf{Descrizione}: l'attore può confermare le modifiche apportate al blocco custom selezionato per la modifica;
+\item \textbf{Precondizione}: l'attore ha selezionato il blocco custom da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Postcondizione}: il sistema visualizza il blocco custom modificato;	
+\item \textbf{Scenario principale}:
+L'attore conferma le modifiche apportate al blocco custom selezionato per la modifica.
+\end{itemize}
 \subsection{UC6: Salvataggio}
 \label{UC6}
 \begin{itemize}
@@ -2136,6 +2330,9 @@ l'attore visualizza un messaggio d'errore.
 \hypertarget{RFO1}{RFO1} & l'attore può caricare un progetto &  \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC2]{UC2}\\ \hline
 
+\hypertarget{RFO1.1}{RFO1.1} & il sistema deve visualizzare un messaggio d'errore se l'attore cerca di caricare come progetto un file incompatibile con l'editor stesso &  \hyperlink{Interno}{Interno}\\
+& & \hyperref[UC2.1]{UC2.1}\\ \hline
+
 \hypertarget{RFO2}{RFO2} & l'attore può creare un nuovo progetto &  \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC3]{UC3}\\ \hline
 
@@ -2182,11 +2379,11 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.1.4]{UC4.1.4}\\
 & &\hyperref[UC4.1.4.5]{UC4.1.4.5}\\ \hline
 
-\hypertarget{RFO3.1.4.6}{RFO3.1.4.6} & l’attore può confermare l'inserimento dell'attributo & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.1.4.6}{RFO3.1.4.6} & l'attore può confermare l'inserimento dell'attributo & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.1.4]{UC4.1.4}\\
 & &\hyperref[UC4.1.4.6]{UC4.1.4.6}\\ \hline
 
-\hypertarget{RFO3.1.4.6.1}{RFO3.1.4.6.1} & il sistema deve visualizzare un messaggio d’errore se l'attore non ha inserito il nome dell'attributo, non ha inserito il tipo dell'attributo o ha inserito un nome per l'attributo già esistente & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.1.4.6.1}{RFO3.1.4.6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha inserito il nome dell'attributo, non ha inserito il tipo dell'attributo o ha inserito un nome per l'attributo già esistente & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.1.4.6]{UC4.1.4.6}\\
 & &\hyperref[UC4.1.4.6.1]{UC4.1.4.6.1}\\ \hline
 
@@ -2218,11 +2415,11 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.1.6.3]{UC4.1.6.3}\\
 & &\hyperref[UC4.1.6.3.2]{UC4.1.6.3.2}\\ \hline
 
-\hypertarget{RFO3.1.6.3.3}{RFO3.1.6.3.3} & l’attore può confermare l'inserimento del parametro & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.1.6.3.3}{RFO3.1.6.3.3} & l'attore può confermare l'inserimento del parametro & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.1.6.3]{UC4.1.6.3}\\
 & &\hyperref[UC4.1.6.3.3]{UC4.1.6.3.3}\\ \hline
 
-\hypertarget{RFO3.1.6.3.3.1}{RFO3.1.6.3.3.1} & il sistema deve visualizzare un messaggio d’errore se l'attore non ha inserito il nome del parametro o non ha inserito il tipo del parametro &  \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.1.6.3.3.1}{RFO3.1.6.3.3.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha inserito il nome del parametro o non ha inserito il tipo del parametro &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.1.6.3.3]{UC4.1.6.3.3}\\
 & &\hyperref[UC4.1.6.3.3.1]{UC4.1.6.3.3.1}\\ \hline
 
@@ -2230,7 +2427,7 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.1.6]{UC4.1.6}\\
 & &\hyperref[UC4.1.6.4]{UC4.1.6.4}\\ \hline
 
-\hypertarget{RFO3.1.6.5}{RFO3.1.6.5} & l’attore può confermare l'inserimento del metodo & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.1.6.5}{RFO3.1.6.5} & l'attore può confermare l'inserimento del metodo & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.1.6]{UC4.1.6}\\
 & &\hyperref[UC4.1.6.5]{UC4.1.6.5}\\ \hline
 
@@ -2238,7 +2435,7 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.1.6.5]{UC4.1.6.5}\\
 & &\hyperref[UC4.1.6.5.1]{UC4.1.6.5.1}\\ \hline
 
-\hypertarget{RFO3.1.6.6}{RFO3.1.6.6} & l’attore può rimuovere il parametro del metodo & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.1.6.6}{RFO3.1.6.6} & l'attore può rimuovere il parametro del metodo & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.1.6]{UC4.1.6}\\
 & &\hyperref[UC4.1.6.6]{UC4.1.6.6}\\ \hline
 
@@ -2302,11 +2499,11 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.3]{UC4.3}\\
 & &\hyperref[UC4.3.2]{UC4.3.2}\\ \hline
 
-\hypertarget{RFO3.3.3}{RFO3.3.3} & l’attore può confermare l'inserimento del commento & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.3.3}{RFO3.3.3} & l'attore può confermare l'inserimento del commento & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.3]{UC4.3}\\
 & &\hyperref[UC4.3.3]{UC4.3.3}\\ \hline
 
-\hypertarget{RFO3.3.3.1}{RFO3.3.3.1} & il sistema deve visualizzare un messaggio d’errore se l'attore non ha scelto il "parent" del commento. & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO3.3.3.1}{RFO3.3.3.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha scelto il "parent" del commento. & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.3.3]{UC4.3.3}\\
 & &\hyperref[UC4.3.3.1]{UC4.3.3.1}\\ \hline
 
@@ -2482,15 +2679,15 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5.1]{UC5.1}\\
 & \hyperref[UC5.1.2]{UC5.1.2}\\ \hline
 
-\hypertarget{RFO4.1.3}{RFO4.1.3} & l’attore può inserire un commento per il blocco variabile & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.1.3}{RFO4.1.3} & l'attore può inserire un commento per il blocco variabile & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.1]{UC5.1}\\
 & \hyperref[UC5.1.3]{UC5.1.3}\\ \hline
 
-\hypertarget{RFO4.1.4}{RFO4.1.4} & l’attore può confermare l'inserimento del blocco variabile &\hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.1.4}{RFO4.1.4} & l'attore può confermare l'inserimento del blocco variabile &\hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.1]{UC5.1}\\
 & \hyperref[UC5.1.4]{UC5.1.4}\\ \hline
 
-\hypertarget{RFO4.1.4.1}{RFO4.1.4.1} & il sistema deve visualizzare un messaggio d’errore se l'attore non ha fornito la variabile da inizializzare, non ha fornito un valore da assegnare alla variabile o non ha inserito un commento. & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.1.4.1}{RFO4.1.4.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha fornito la variabile da inizializzare, non ha fornito un valore da assegnare alla variabile o non ha inserito un commento. & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.1.4]{UC5.1.4}\\
 & \hyperref[UC5.1.4.1]{UC5.1.4.1}\\ \hline
 
@@ -2502,15 +2699,15 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5.2]{UC5.2}\\
 & \hyperref[UC5.2.1]{UC5.2.1}\\ \hline
 
-\hypertarget{RFO4.2.2}{RFO4.2.2} & l’attore può inserire un commento per il blocco metodo & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.2.2}{RFO4.2.2} & l'attore può inserire un commento per il blocco metodo & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.2]{UC5.2}\\
 & \hyperref[UC5.2.2]{UC5.2.2}\\ \hline
 
-\hypertarget{RFO4.2.3}{RFO4.2.3} & l’attore può confermare l'inserimento del blocco metodo & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.2.3}{RFO4.2.3} & l'attore può confermare l'inserimento del blocco metodo & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.2]{UC5.2}\\
 & \hyperref[UC5.2.3]{UC5.2.3}\\ \hline
 
-\hypertarget{RFO4.2.3.1}{RFO4.2.3.1} & il sistema deve visualizzare un messaggio d’errore se l'attore non ha fornito un metodo da inserire o non ha inserito un commento & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.2.3.1}{RFO4.2.3.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha fornito un metodo da inserire o non ha inserito un commento & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.2.3]{UC5.2.3}\\
 & \hyperref[UC5.2.3.1]{UC5.2.3.1}\\ \hline
 
@@ -2530,15 +2727,15 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5.3]{UC5.3}\\
 & \hyperref[UC5.3.3]{UC5.3.3}\\ \hline
 
-\hypertarget{RFO4.3.4}{RFO4.3.4} & l’attore deve inserire un commento per il blocco if/else & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.3.4}{RFO4.3.4} & l'attore deve inserire un commento per il blocco if/else & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.3]{UC5.3}\\
 & \hyperref[UC5.3.4]{UC5.3.4}\\ \hline
 
-\hypertarget{RFO4.3.5}{RFO4.3.5} & l’attore può confermare l'inserimento del blocco if/else & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.3.5}{RFO4.3.5} & l'attore può confermare l'inserimento del blocco if/else & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.3]{UC5.3}\\
 & \hyperref[UC5.3.5]{UC5.3.5}\\ \hline
 
-\hypertarget{RFO4.3.5.1}{RFO4.3.5.1} & il sistema visualizza un messaggio d’errore se l'attore non ha fornito la condizione da verificare o non ha inserito un commento & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.3.5.1}{RFO4.3.5.1} & il sistema visualizza un messaggio d'errore se l'attore non ha fornito la condizione da verificare o non ha inserito un commento & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.3.5]{UC5.3.5}\\
 & \hyperref[UC5.3.5.1]{UC5.3.5.1}\\ \hline
 
@@ -2554,15 +2751,15 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5.4]{UC5.4}\\
 & \hyperref[UC5.4.2]{UC5.4.2}\\ \hline
 
-\hypertarget{RFO4.4.3}{RFO4.4.3} & l’attore può inserire un commento per il blocco while & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.4.3}{RFO4.4.3} & l'attore può inserire un commento per il blocco while & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.4]{UC5.4}\\
 & \hyperref[UC5.4.3]{UC5.4.3}\\ \hline
 
-\hypertarget{RFO4.4.4}{RFO4.4.4} & l’attore può confermare l'inserimento del blocco while & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.4.4}{RFO4.4.4} & l'attore può confermare l'inserimento del blocco while & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.4]{UC5.4}\\
 & \hyperref[UC5.4.4]{UC5.4.4}\\ \hline
 
-\hypertarget{RFO4.4.4.1}{RFO4.4.4.1} & il sistema deve visualizzare un messaggio d’errore se l'attore non ha fornito la condizione da verificare o non ha inserito un commento. &\hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.4.4.1}{RFO4.4.4.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha fornito la condizione da verificare o non ha inserito un commento. &\hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.4.4]{UC5.4.4}\\
 & \hyperref[UC5.4.4.1]{UC5.4.4.1}\\ \hline
 
@@ -2586,11 +2783,11 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5.5]{UC5.5}\\
 & \hyperref[UC5.5.4]{UC5.5.4}\\ \hline
 
-\hypertarget{RFO4.5.5}{RFO4.5.5} & l’attore può inserire un commento per il blocco for & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.5.5}{RFO4.5.5} & l'attore può inserire un commento per il blocco for & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.5]{UC5.5}\\
 & \hyperref[UC5.5.5]{UC5.5.5}\\ \hline
 
-\hypertarget{RFO4.5.6}{RFO4.5.6} & l’attore può confermare l'inserimento del blocco for &  \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.5.6}{RFO4.5.6} & l'attore può confermare l'inserimento del blocco for &  \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.5]{UC5.5}\\
 & \hyperref[UC5.5.6]{UC5.5.6}\\ \hline
 
@@ -2606,11 +2803,11 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5.6]{UC5.6}\\
 & \hyperref[UC5.6.1]{UC5.6.1}\\ \hline
 
-\hypertarget{RFO4.6.2}{RFO4.6.2} & l’attore può inserire un commento per il blocco custom & \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.6.2}{RFO4.6.2} & l'attore può inserire un commento per il blocco custom & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.6]{UC5.6}\\
 & \hyperref[UC5.6.2]{UC5.6.2}\\ \hline
 
-\hypertarget{RFO4.6.3}{RFO4.6.3} & l’attore può confermare l'inserimento del blocco custom &\hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.6.3}{RFO4.6.3} & l'attore può confermare l'inserimento del blocco custom &\hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.6]{UC5.6}\\
 & \hyperref[UC5.6.3]{UC5.6.3}\\ \hline
 
@@ -2662,11 +2859,46 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5]{UC5}\\
 & \hyperref[UC5.18]{UC5.18}\\ \hline
 
+\hypertarget{RFD4.19}{RFD4.19} & l'attore può spostare uno dei blocchi inseriti all'interno del diagramma delle attività gestito in una nuova posizione &  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC5]{UC5}\\
+& \hyperref[UC5.19]{UC5.19}\\ \hline
+
+\hypertarget{RFD4.20}{RFD4.20} & l'attore può modificare un blocco variabile &  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC5]{UC5}\\
+& \hyperref[UC5.20]{UC5.20}\\ \hline
+
+\hypertarget{RFD4.20.1}{RFD4.20.1} & l'attore può modificare il nome del blocco variabile &  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC5.20]{UC5.20}\\
+& \hyperref[UC5.20.1]{UC5.20.1}\\ \hline
+
+\hypertarget{RFD4.20.1}{RFD4.20.1} & l'attore può modificare il nome del blocco variabile &  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC5.20]{UC5.20}\\
+& \hyperref[UC5.20.1]{UC5.20.1}\\ \hline
+
 \hypertarget{RFO5}{RFO5} & l'attore può salvare il progetto &  \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC6]{UC6}\\ \hline
 
+\hypertarget{RFO5.1}{RFO5.1} & l'attore deve indicare il nome del file in cui salvare il progetto corrente&  \hyperlink{Interno}{Interno}\\
+& & \hyperref[UC6]{UC6}\\ 
+& & \hyperref[UC6.1]{UC6.1}\\ \hline
+
+\hypertarget{RFO5.2}{RFO5.2} & l'attore deve indicare la directory in cui salvare il progetto corrente&  \hyperlink{Interno}{Interno}\\
+& & \hyperref[UC6]{UC6}\\ 
+& & \hyperref[UC6.2]{UC6.2}\\ \hline
+
+\hypertarget{RFO5.3}{RFO5.3} & l'attore può confermare il salvataggio del progetto corrente &  \hyperlink{Interno}{Interno}\\
+& & \hyperref[UC6]{UC6}\\ 
+& & \hyperref[UC6.3]{UC6.3}\\ \hline
+
+\hypertarget{RFO5.3.1}{RFO5.3.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha specificato il nome del file o la directory in cui salvare il progetto corrente &  \hyperlink{Interno}{Interno}\\
+& & \hyperref[UC6.3]{UC6.3}\\ 
+& & \hyperref[UC6.3.1]{UC6.3.1}\\ \hline
+
 \hypertarget{RFO6}{RFO6} & l'attore può generare l'applicativo dai diagrammi da lui realizzati & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
 & & \hyperref[UC7]{UC7}\\ \hline
+
+\hypertarget{RFO6.1}{RFO6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha rispettato i vincoli imposti dagli stereotipi scelti& \hyperlink{Interno}{Interno}\\
+& & \hyperref[UC7.1]{UC7.1}\\ \hline
 
 \caption[Requisiti Funzionali]{Requisiti Funzionali}
 \label{tabella:req0}
